--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Template</title>
+  <title>Rikab Gambhir</title>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="favicon.ico" type="image/icon">
   <link rel="icon" href="favicon.ico" type="image/icon">
@@ -22,36 +22,55 @@
   <script src="js/main.js"></script>
 </head>
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="JY83yB4L21zRVvDarmmI5D7XRR4Pzl5SDU_LKLa7nV4" />
+</head>
+
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-custom">
-    <div class="container">
-      <a class="navbar-brand" href="#"> <img src="assets/img/test_256.png" height="45" /> &nbsp Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-        aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  
 
-
-      <div class="collapse navbar-collapse" id="navbarToggler">
-        <ul class="navbar-nav ml-auto float-center text-center">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-      </div>
-  </nav>
-
+  <!--Main Body  -->
   <div class="container-fluid splash">
-    <img id="splash-logo" src="assets/img/test_256.png" />
-    <h1>TITLE</h1>
-    <h2>Subtitle</h2>
+    <img id="splash-logo" src="assets/img/rikab-gambhir-headshot-300px.png" />
+    <h1>Rikab Gambhir</h1>
+    <h2>Theoretical Physicist</h2>
+
+  <!-- Socials -->
+  <div class="container-fluid splash-blurb">
+    <!-- <div class="row justify-content-center socials">
+      <div class="col-lg-6">
+        <p class="fade-in two"> Student researcher interested in beyond Standard Model searches at the Large Hadron Collider as well as various dark matter candidate searches</p>
+      </div>
+    </div> -->
+    <div class="row justify-content-center socials">
+
+      <a class="btn btn-light btn-social fade-in two" href="https://github.com/rikab"><i
+          class="fa fa-github"></i></a>
+      <a class="btn btn-light btn-social fade-in three" href="https://twitter.com/cornkab"><i
+          class="fa fa-twitter"></i></a>
+
+      <a class="btn btn-light fade-in btn-social four" href="https://www.linkedin.com/in/rikab-gambhir-457375136"><i
+          class="fa fa-linkedin"></i></a>
+
+    </div>
   </div>
+
+  Buttons
+  <div class="container-fluid">
+    <div class="row justify-content-center pseudo-nav">
+      <div class="col-lg-2">
+        <a class="btn btn-light btn-bounce fade-in four" href="./assets/pdf/rikab_cv.pdf">CV</a>
+      </div>
+      <div class="col-lg-2">
+        <a class="btn btn-light btn-bounce fade-in five page-scroll smoothScroll" href="#about_me">About Me</a>
+      </div>
+      <div class="col-lg-2">
+        <a class="btn btn-light btn-bounce fade-in five page-scroll smoothScroll" href="#research">Research</a>
+      </div>
+    </div>
+  </div>
+
 
 
   <div class="container-fluid section section-light">
