--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="container-fluid">
     <div class="row justify-content-center pseudo-nav">
       <div class="col-lg-2">
-        <a class="btn btn-light btn-bounce fade-in four" href="./assets/pdf/rikab_cv.pdf">CV</a>
+        <a class="btn btn-light btn-bounce fade-in four" href="./assets/pdf/rikab_CV.pdf">CV</a>
       </div>
       <div class="col-lg-2">
         <a class="btn btn-light btn-bounce fade-in five page-scroll smoothScroll" href="#about_me">About Me</a>
@@ -87,7 +87,7 @@
       </div>
 
      
-      <a class="btn btn-light see-more" href="./assets/pdf/rikab_cv.pdf">See
+      <a class="btn btn-light see-more" href="./assets/pdf/rikab_CV.pdf">See
         More</a>
     </div>
   </div>
@@ -108,7 +108,7 @@
       </div>
 
       
-      <a class="btn btn-light see-more" href="./assets/pdf/rikab_cv.pdf">See
+      <a class="btn btn-light see-more" href="./assets/pdf/rikab_CV.pdf">See
         More</a>
     </div>
   </div>
