--- a/index.html
+++ b/index.html
@@ -89,8 +89,62 @@
       <div class="row justify-content-center pseudo-nav">
         <div class="section-blurb">
           <!-- <div class="col-lg-8"> -->
-            <p class=""> I am a physics PhD student at the <a href="https://physics.mit.edu/" target="_blank" rel="noopener">Massachusetts Institute of Technology (MIT)</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p class=""> I am a physics PhD student at the <a href="https://physics.mit.edu/" target="_blank" rel="noopener">Massachusetts Institute of Technology (MIT)</a>. My background is in physics, mathematics, data science, and applied sciences in engineering. </p>
           <!-- </div> -->
+        </div>
+      </div>
+
+      <div class="row justify-content-center pseudo-nav">
+        <!-- <div class="col" style="padding-top: 40px; padding-bottom: 40px; vertical-align: top;">
+          <h3>Biographical</h3>
+          <ul>
+            <li>
+              <p>Full Name: Rikab Singh Gambhir</p>
+            </li>
+            <li>
+              <p>Birthday: 24 January 1998</p>
+            </li> 
+            <li>
+              <p>Contact: rikab&#64;mit.edu</p>
+            </li> 
+          </ul>
+        </div> -->
+        <div class="col" style="padding-top: 40px; padding-bottom: 40px;">
+          <h3>Interests</h3>
+          <ul>
+              <li>
+                <p>Particle Physics</p>
+                <ul>
+                  <li><p>Quantum Field Theory</p></li>
+                  <li><p>Jets and QCD</p></li>
+                  <li><p>Beyond the Standard Model</p></li>
+                </ul>
+              </li>
+              <li>
+                <p>Data Science</p>
+                <ul>
+                  <li><p>Machine Learning</p></li>
+                  <li><p>Optimal Transport</p></li>
+                </ul>
+              </li>
+          </ul>
+        </div>
+        <div class="col" style="padding-top: 40px; padding-bottom: 40px;">
+          <h3>Education</h3>
+          <ul>
+            <li>
+              <div class="description">
+                <p class="course">PhD Candidate in Physics, 2020-</p>
+                <p class="institution">Massachusetts Institute of Technology<br>Advisor: <a href="http://jthaler.net/">Jesse Thaler</a><br></p>
+              </div>
+            </li>
+            <li>
+              <div class="description">
+                <p class="course">Bachelor of Science in Physics, Mathematics, and Applied Science 2016-2020</p>
+                <p class="institution">Rutgers University<br><i>summa cum laude</i>, Highest Honors<br>Advisor: <a href="http://cgisvr.physics.rutgers.edu/cgi-bin/physdb/genpip.pl?Schnetzer">Stephen Schnetzer</a></p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
 
