added grad seminar talk 2023

--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
             </div>
 
           </div>
+
+          <font color=black>You can install SHAPER for Python  with the command <font color=red>pip install pyshaper</font></font> 
+
           <div class="card-footer">
             <a href="https://github.com/rikab/SHAPER" class="btn btn-light">Learn More [The SHAPER Package]</a>
           </div>
@@ -327,7 +330,9 @@
 
       <div class="section-blurb">
         <div class="row justify-content-center pseudo-nav">
-            <p class="">Below is a list of all public talks I have given, organized by the publication they correspond to. Note that while several talks share the same category and even the same title, the talks themselves can be very different, especially if the format (invited seminar versus talk, for example) is different! Additionally, many slides originally had GIFs and animations, which will not render here.</p>
+            <p class="">Below is a list of all public talks I have given, organized by the publication they correspond to. Note that while several talks share the same category and even the same title, the talks themselves can be very different, especially if the format (invited seminar versus talk, for example) is different! Unfortunately, many slides originally had GIFs and animations, which will not render here as PDFs. </p>
+              
+            <p class="">Items marked with a red star (<font color=red>★</font>) are my recommended versions for viewing!</p>
         </div>
       </div>
 
@@ -346,6 +351,9 @@
 
 
         <div class="row justify-content-left pseudo-nav">
+          <li>
+            <p class="card-text"> <font color=red>★</font><a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet?"</a>, Internal Seminar, 17 March 2022, for the MIT CTP Graduate Seminar.  <h5 class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Slides [PDF]</a></h5>  </p> 
+          </li> 
           <li>
             <p class="card-text"> <a href = "https://indico.cern.ch/event/1159913/contributions/5062759/">"Can You Hear the Shape of a Jet?"</a>, Talk, 4 Novemebr 2022, at ML4Jets2022.  <h5 class="card-subtitle text-muted">Rutgers University: New Jersey, United States. <a href = "./assets/talks/(ML4Jets 2022) Can you hear the shape of a jet .pdf">Slides [PDF]</a></h5>  </p> 
           </li>  
@@ -388,7 +396,7 @@
           <p class="card-text"> <a href = "https://neurips.cc/virtual/2022/event/56849">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Poster, 3 December 2022, at Machine Learning and the Physical Sciences.  <h5 class="card-subtitle text-muted">NeurIPS (Virtual). <a href = "./assets/talks/frequentist_way_poster.png">Poster [PNG]</a></h5>  </p> 
         </li>  
         <li>
-          <p class="card-text"> <a href = "https://indico.cern.ch/event/1223571/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Talk, 22 Novemebr 2022, for ATLAS Jet/Etmiss.  <h5 class="card-subtitle text-muted">CERN (Virtual). <a href = "./assets/talks/(ATLAS) Frequentist Way.pdf">Slides [PDF]</a></h5>  </p> 
+          <p class="card-text"> <font color=red>★</font><a href = "https://indico.cern.ch/event/1223571/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Talk, 22 Novemebr 2022, for ATLAS Jet/Etmiss.  <h5 class="card-subtitle text-muted">CERN (Virtual). <a href = "./assets/talks/(ATLAS) Frequentist Way.pdf">Slides [PDF]</a></h5>  </p> 
         </li>  
         <li>
           <p class="card-text"> <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invied Seminar, 13 September 2022, for the UCI Physics Astro/Particle-ML Seminar series.  <h5 class="card-subtitle text-muted">University of Califoria, Irvine (Virtual). <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">Slides [PDF]</a></h5>  </p> 
