--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
           </div>
 
-          <font color=black>You can install SHAPER for Python  with the command <font color=red>pip install pyshaper</font></font> 
+          <font color=black>You can install SHAPER for Python with the command <font color=red>pip install pyshaper</font></font> 
 
           <div class="card-footer">
             <a href="https://github.com/rikab/SHAPER" class="btn btn-light">Learn More [The SHAPER Package]</a>
@@ -352,19 +352,19 @@
 
         <div class="row justify-content-left pseudo-nav">
           <li>
-            <p class="card-text"> <font color=red>★</font><a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet?"</a>, Internal Seminar, 17 March 2022, for the MIT CTP Graduate Seminar.  <h5 class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Slides [PDF]</a></h5>  </p> 
+            <p class="card-text"> <font color=red>★</font><a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet?"</a>, Internal Seminar, 17 March 2022, for the MIT CTP Graduate Seminar.  <font class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
           </li> 
           <li>
-            <p class="card-text"> <a href = "https://indico.cern.ch/event/1159913/contributions/5062759/">"Can You Hear the Shape of a Jet?"</a>, Talk, 4 Novemebr 2022, at ML4Jets2022.  <h5 class="card-subtitle text-muted">Rutgers University: New Jersey, United States. <a href = "./assets/talks/(ML4Jets 2022) Can you hear the shape of a jet .pdf">Slides [PDF]</a></h5>  </p> 
+            <p class="card-text"> <a href = "https://indico.cern.ch/event/1159913/contributions/5062759/">"Can You Hear the Shape of a Jet?"</a>, Talk, 4 Novemebr 2022, at ML4Jets2022.  <font class="card-subtitle text-muted">Rutgers University: New Jersey, United States. <a href = "./assets/talks/(ML4Jets 2022) Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
           </li>  
           <li>
-            <p class="card-text"> <a href = "https://indico.cern.ch/event/1144064/contributions/4940343/">"Can You Hear the Shape of a Jet?"</a>, Talk, 15 August 2022, at BOOST 2022.  <h5 class="card-subtitle text-muted">University of Hamburg: Hamburg, Germany. <a href = "./assets/talks/(BOOST 2022) Can you hear the shape of a jet -2.pdf">Slides [PDF]</a></h5>  </p> 
+            <p class="card-text"> <a href = "https://indico.cern.ch/event/1144064/contributions/4940343/">"Can You Hear the Shape of a Jet?"</a>, Talk, 15 August 2022, at BOOST 2022.  <font class="card-subtitle text-muted">University of Hamburg: Hamburg, Germany. <a href = "./assets/talks/(BOOST 2022) Can you hear the shape of a jet -2.pdf">Slides [PDF]</a></font>  </p> 
           </li>  
           <li>
-            <p class="card-text"> <a href = "./assets/talks/IAIFI Story.pdf">"Can You Hear the Shape of a Jet? An IAIFI Story"</a>, Local Presentation, 11 August 2022, for IAIFI/NSF Review.  <h5 class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/IAIFI Story.pdf">Slides [PDF]</a></h5>  </p> 
+            <p class="card-text"> <a href = "./assets/talks/IAIFI Story.pdf">"Can You Hear the Shape of a Jet? An IAIFI Story"</a>, Local Presentation, 11 August 2022, for IAIFI/NSF Review.  <font class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/IAIFI Story.pdf">Slides [PDF]</a></font>  </p> 
           </li>  
           <li>
-            <p class="card-text"> <a href = "https://meetings.aps.org/Meeting/APR22/Session/K08.7">"Can You Hear the Shape of a Jet?"</a>, Talk, 10 April 2022, at APS April Meeting 2022.  <h5 class="card-subtitle text-muted">New York City: New York, United States. <a href = "./assets/talks/can_you_hear_the_shape_of_a_jet.pdf">Slides [PDF]</a></h5>  </p> 
+            <p class="card-text"> <a href = "https://meetings.aps.org/Meeting/APR22/Session/K08.7">"Can You Hear the Shape of a Jet?"</a>, Talk, 10 April 2022, at APS April Meeting 2022.  <font class="card-subtitle text-muted">New York City: New York, United States. <a href = "./assets/talks/can_you_hear_the_shape_of_a_jet.pdf">Slides [PDF]</a></font>  </p> 
           </li>  
         
 
@@ -393,16 +393,16 @@
 
       <div class="row justify-content-left pseudo-nav">
         <li>
-          <p class="card-text"> <a href = "https://neurips.cc/virtual/2022/event/56849">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Poster, 3 December 2022, at Machine Learning and the Physical Sciences.  <h5 class="card-subtitle text-muted">NeurIPS (Virtual). <a href = "./assets/talks/frequentist_way_poster.png">Poster [PNG]</a></h5>  </p> 
+          <p class="card-text"> <a href = "https://neurips.cc/virtual/2022/event/56849">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Poster, 3 December 2022, at Machine Learning and the Physical Sciences.  <font class="card-subtitle text-muted">NeurIPS (Virtual). <a href = "./assets/talks/frequentist_way_poster.png">Poster [PNG]</a></font>  </p> 
         </li>  
         <li>
-          <p class="card-text"> <font color=red>★</font><a href = "https://indico.cern.ch/event/1223571/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Talk, 22 Novemebr 2022, for ATLAS Jet/Etmiss.  <h5 class="card-subtitle text-muted">CERN (Virtual). <a href = "./assets/talks/(ATLAS) Frequentist Way.pdf">Slides [PDF]</a></h5>  </p> 
+          <p class="card-text"> <font color=red>★</font><a href = "https://indico.cern.ch/event/1223571/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Talk, 22 Novemebr 2022, for ATLAS Jet/Etmiss.  <font class="card-subtitle text-muted">CERN (Virtual). <a href = "./assets/talks/(ATLAS) Frequentist Way.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
         <li>
-          <p class="card-text"> <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invied Seminar, 13 September 2022, for the UCI Physics Astro/Particle-ML Seminar series.  <h5 class="card-subtitle text-muted">University of Califoria, Irvine (Virtual). <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">Slides [PDF]</a></h5>  </p> 
+          <p class="card-text"> <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invied Seminar, 13 September 2022, for the UCI Physics Astro/Particle-ML Seminar series.  <font class="card-subtitle text-muted">University of Califoria, Irvine (Virtual). <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
         <li>
-          <p class="card-text"> <a href = "https://indico.cern.ch/event/980214/contributions/4413598/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Talk, 7 July 2021, at ML4Jets2021.  <h5 class="card-subtitle text-muted">University of Heidelberg (Virtual). <a href = "./assets/talks/Calibration and Correlation ML4Jets.pdf">Slides [PDF]</a></h5>  </p> 
+          <p class="card-text"> <a href = "https://indico.cern.ch/event/980214/contributions/4413598/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Talk, 7 July 2021, at ML4Jets2021.  <font class="card-subtitle text-muted">University of Heidelberg (Virtual). <a href = "./assets/talks/Calibration and Correlation ML4Jets.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
       
 
