--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
       <div class="section-blurb">
         <div class="row justify-content-center pseudo-nav">
-            <p class="">Below is a list of all public talks I have given, organized by the publication they correspond to. Note that while several talks share the same category and even the same title, the talks themselves can be very different, especially if the format (invited seminar versus talk, for example) is different! Unfortunately, many slides originally had GIFs and animations, which will not render here as PDFs. </p>
+            <p class="">Below is a list of all public presentations I have given, organized by topic. Note that while several talks share the same category and even the same title, the talks themselves can be very different, especially if the format (invited seminar versus talk, for example) is different! Unfortunately, many slides originally had GIFs and animations, which will not render here as PDFs. </p>
               
             <p class="">Items marked with a red star (<font color=red>★</font>) are my recommended versions for viewing!</p>
         </div>
@@ -399,7 +399,7 @@
           <p class="card-text"> <font color=red>★</font><a href = "https://indico.cern.ch/event/1223571/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Talk, 22 Novemebr 2022, for ATLAS Jet/Etmiss.  <font class="card-subtitle text-muted">CERN (Virtual). <a href = "./assets/talks/(ATLAS) Frequentist Way.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
         <li>
-          <p class="card-text"> <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invied Seminar, 13 September 2022, for the UCI Physics Astro/Particle-ML Seminar series.  <font class="card-subtitle text-muted">University of Califoria, Irvine (Virtual). <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">Slides [PDF]</a></font>  </p> 
+          <p class="card-text"> <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Invited Seminar, 13 September 2022, for the UCI Physics Astro/Particle-ML Seminar series.  <font class="card-subtitle text-muted">University of Califoria, Irvine (Virtual). <a href = "./assets/talks/(UCI) Frequentist Way-1-1.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
         <li>
           <p class="card-text"> <a href = "https://indico.cern.ch/event/980214/contributions/4413598/">"Learning Uncertainties the Frequentist Way: Calibration and Correlation in High Energy Physics"</a>, Talk, 7 July 2021, at ML4Jets2021.  <font class="card-subtitle text-muted">University of Heidelberg (Virtual). <a href = "./assets/talks/Calibration and Correlation ML4Jets.pdf">Slides [PDF]</a></font>  </p> 
