--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
       <div class="row justify-content-left pseudo-nav">
         <li>
-          <p class="card-text"> <font color=red>★</font> <a href = "https://indico.fnal.gov/event/58914/timetable/">"How Do I Take my Cup of CMS Open Data?"</a>, Invited Talk, 11 July 2023, at Fermilab CMS Open Data Workshop 2023.  <font class="card-subtitle text-muted">Fermilab, Illinois, United States. <a href = "/.assets/talks/(Fermilab 2023) CMS Open Data-2.pdf">Slides [PDF]</a></font>  </p> 
+          <p class="card-text"> <font color=red>★</font> <a href = "https://indico.fnal.gov/event/58914/timetable/">"How Do I Take my Cup of CMS Open Data?"</a>, Invited Talk, 11 July 2023, at Fermilab CMS Open Data Workshop 2023.  <font class="card-subtitle text-muted">Fermilab, Illinois, United States. <a href = "./assets/talks/(Fermilab 2023) CMS Open Data-2.pdf">Slides [PDF]</a></font>  </p> 
         </li>  
        
 
