--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!--Main Body  -->
   <div class="container-fluid splash">
     <!-- <img id="splash-logo" src="assets/img/better_headshot.png" /> -->
-    <img id="splash-logo" src="assets/img/rikab-gambhir-headshot-300px.png" />
+    <img id="splash-logo" src="assets/img/fun_headshot.jpg"  sizes="Large/>
     <h1>Rikab Gambhir</h1>
     <h2>Theoretical Physicist</h2>
 
