--- a/index.html
+++ b/index.html
@@ -564,7 +564,10 @@
 
         <div class="row justify-content-left pseudo-nav">
           <li>
-            <p class="card-text"> <font color=red>★</font><a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet?"</a>, Internal Seminar, 17 March 2022, for the MIT CTP Graduate Seminar.  <font class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
+            <p class="card-text"><a href = "./assets/talks/(IAIFI 2023) Can you hear the shape of a jet_.pdf Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet? An IAIFI Story"</a>, Internal Seminar, 16 May 2023, for the IAIFI Engineering Advisory Board.  <font class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(IAIFI 2023) Can you hear the shape of a jet_.pdf Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
+          </li> 
+          <li>
+            <p class="card-text"> <font color=red>★</font><a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Can You Hear the Shape of a Jet?"</a>, Internal Seminar, 17 March 2023, for the MIT CTP Graduate Seminar.  <font class="card-subtitle text-muted">MIT: Massachusetts, United States. <a href = "./assets/talks/(Grad Seminar 2023) Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
           </li> 
           <li>
             <p class="card-text"> <a href = "https://indico.cern.ch/event/1159913/contributions/5062759/">"Can You Hear the Shape of a Jet?"</a>, Talk, 4 Novemebr 2022, at ML4Jets2022.  <font class="card-subtitle text-muted">Rutgers University: New Jersey, United States. <a href = "./assets/talks/(ML4Jets 2022) Can you hear the shape of a jet .pdf">Slides [PDF]</a></font>  </p> 
