--- a/index.html
+++ b/index.html
@@ -533,9 +533,18 @@
         <h3 class="card-title"> SPECTER: Efficient Evaluation of the Spectral EMD </h3>
 
        
+
         <div class="row justify-content-left pseudo-nav">
           <li>
-            <p class="card-text"> <font color=red>★</font><a href = "https://agenda.infn.it/event/37093/contributions/234299/">"SPECTER: Efficient Evaluation of the Spectral EMD "</a>, Talk, 31 July 2024, at BOOST 2024.  <font class="card-subtitle text-muted">Palazzo Ducale: Genova, Italy. <a href = "./assets/talks/(BOOST 2024) SPECTER.pdf">Slides [PDF]</a></font>  </p> 
+            <p class="card-text"> <font color=red>★</font><a href = "https://iaifi.org/summer-workshop">"SPECTER: Efficient Evaluation of the Spectral EMD "</a>, Talk, 15 August 2024, at the IAIFI Workshop.  <font class="card-subtitle text-muted">MIT Media Lab. <a href = "./assets/talks/(IAIFI 2024) SPECTER.pdf">Slides [PDF]</a></font>  </p> 
+          </li>  
+      </div>
+
+
+
+        <div class="row justify-content-left pseudo-nav">
+          <li>
+            <p class="card-text"><a href = "https://agenda.infn.it/event/37093/contributions/234299/">"SPECTER: Efficient Evaluation of the Spectral EMD "</a>, Talk, 31 July 2024, at BOOST 2024.  <font class="card-subtitle text-muted">Palazzo Ducale: Genova, Italy. <a href = "./assets/talks/(BOOST 2024) SPECTER.pdf">Slides [PDF]</a></font>  </p> 
           </li>  
       </div>
 
